Sat Oct 16 00:08:00 2010  Koichi Sasada  <ko1@atdot.net>

	* hash.c (rb_hash_aref): skip calling "default" method
	  if it is not needed, for speed-up.

Fri Oct 15 23:36:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (NUM2DEVT, DEVT2NUM, PRI_DEVT_PREFIX): fallback to
	  unsigned int.

Fri Oct 15 22:54:46 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_hresult2msg): get English message first,
	  instead of system default. [ruby-core:32765]

Fri Oct 15 22:47:31 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (VALUE): prefer long over uintptr_t,
	  FIX2LONG expects VALUE to be long at least.

	* include/ruby/ruby.h (FIX2LONG): parenthesize the argument.

Fri Oct 15 20:30:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (dev_t): use RUBY_REPLACE_TYPE.

	* file.c (rb_stat_inspect): use PRI_DEVT_PREFIX.

Fri Oct 15 17:26:57 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_pack): simplify comparison of explicit_endian
	  as pointed by nobu.

	* pack.c (pack_unpack): ditto.

Fri Oct 15 16:40:37 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_pack): fix more than one modifiers appear in the
	  format string. [ruby-core:32793]

	* pack.c (pack_unpack): ditto.

Thu Oct 14 23:20:42 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_folderitem2_invokeverb.rb: refactoring.

Thu Oct 14 22:18:29 2010  Koichi Sasada  <ko1@atdot.net>

	* insns.def, iseq.c, vm_insnhelper.c: rename variable name
	  (ip -> iseq).

Thu Oct 14 20:41:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* pack.c (pack_pack): support endian modifiers: < and >.
	  [ruby-dev:42376] Feature #3491

	* pack.c (pack_unpack): ditto.

Thu Oct 14 20:50:51 2010  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (reg_get_val): expand environment in
	  the pathname. [Bug #3907]

Thu Oct 14 07:35:07 2010  NARUSE, Yui  <naruse@ruby-lang.org>
